--- a/src/main/asciidoc/reference/meilisearch-operations.adoc
+++ b/src/main/asciidoc/reference/meilisearch-operations.adoc
@@ -87,9 +87,7 @@ Spring Data Meilisearch provides several implementations: `BasicQuery`, `IndexQu
 ====
 [source,java]
 ----
-Query query = BasicQuery.builder()
-    .withQ("Wonder Woman")
-    .build();
+BasicQuery query = BasicQuery("Wonder Woman");
 ----
 ====
 
@@ -122,3 +120,88 @@ FacetQuery query = FacetQuery.builder()
     .build();
 ----
 ====
+
+[[meilisearch.operations.search-types]]
+== Search Types
+
+Spring Data Meilisearch supports different types of search operations to accommodate various use cases.
+
+[[meilisearch.operations.standard-search]]
+=== Standard Search
+
+Standard search allows you to search for documents within a single index:
+
+====
+[source,java]
+----
+// Search with BasicQuery
+BaseQuery query = new BasicQuery("Wonder Woman");
+SearchHits<Movie> result = meilisearchOperations.search(query, Movie.class);
+List<SearchHit<Movie>> searchHits = result.getSearchHits();
+List<Movie> movies = searchHits.stream().map(SearchHit::getContent).toList();
+
+// Search with filter
+BaseQuery filterQuery = BasicQuery.builder()
+    .withFilter(new String[] { "genres = Drama" })
+    .build();
+SearchHits<Movie> filterResult = meilisearchOperations.search(filterQuery, Movie.class);
+----
+====
+
+[[meilisearch.operations.multi-search]]
+=== Multi-Search
+
+Multi-search allows you to execute multiple search queries in a single request.
+This can be done with homogeneous query types, mixed query types, or across multiple indices:
+
+====
+[source,java]
+----
+// Multi-search across single indices
+List<BaseQuery> queries = List.of(
+    new BasicQuery("Carol"),
+    new BasicQuery("Wonder Woman")
+);
+SearchHits<Movie> singleIndexResults = meilisearchOperations.multiSearch(queries, Movie.class);
+
+// Multi-search across multiple indices
+List<BaseQuery> multiIndexQueries = List.of(
+    IndexQuery.builder().withQ("Carol").withIndexUid("movies").build(),
+    IndexQuery.builder().withQ("Wonder Woman").withIndexUid("comics").build()
+);
+SearchHits<Movie> multiIndexResults = meilisearchOperations.multiSearch(multiIndexQueries, Movie.class);
+----
+====
+
+While both `BasicQuery` and `IndexQuery` can be used for multi-search operations, `IndexQuery` is required when you need to specify different index UIDs or configure federation options.
+Only `IndexQuery` provides methods like `withIndexUid()` and `withFederationOptions()` that allow you to search across multiple indices or configure federated search behavior.
+
+When performing multi-index searches, all results are converted to the specified class type (`Movie.class` in the example).
+If you need to preserve the original types, you should extract and compare specific fields rather than entire objects.
+
+[[meilisearch.operations.facet-search]]
+=== Facet Search
+
+Facet search allows you to retrieve facet information for building faceted navigation interfaces:
+
+====
+[source,java]
+----
+// First, ensure the field is set as filterable in the index settings
+meilisearchOperations.applySettings(Movie.class);
+
+// Perform facet search
+FacetQuery query = new FacetQuery("genres");
+SearchHits<FacetHit> result = meilisearchOperations.facetSearch(query, Movie.class);
+
+// Process facet results
+result.getSearchHits().forEach(hit -> {
+    FacetHit facetHit = hit.getContent();
+    System.out.println("Value: " + facetHit.getValue());
+    System.out.println("Count: " + facetHit.getCount());
+});
+----
+====
+
+Unlike standard and multi-search operations that return entities of type `T`, facet searches return `FacetHit` objects containing facet information.
+Note that while the `clazz` parameter still specifies the document type being searched, the return type is always `SearchHits<FacetHit>` rather than `SearchHits<T>`.
